tdf#161413 Prevent SVGs without width from overflowing the container
Reviewed-on: https://gerrit.libreoffice.org/c/help/+/168400
Tested-by: Jenkins
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>

--- a/help3xsl/default.css
+++ b/help3xsl/default.css
@@ -126,6 +126,10 @@ pre,
     font-family: var(--font_mono);
     word-wrap: anywhere;
 }
+/* prevent SVGs without width from overflowing the container */
+img[src$=".svg"] {
+    max-width: 100%;
+}
 .literal {
     white-space: normal;
 }
